# Comfyui-General-API-Node

./: .gitignore  LICENSE  NOTICE  README.md  README_CN.md  ShowTextNode.py  SimpleTextNode.py  __init__.py  file_io_node.py  general_api_node.py  gitignore.txt  json_parser_node.py  list_utils_node.py  package.json  pyproject.toml  requirements.txt  text_utils_node.py
.github/workflows/: publish.yml
js/: dynamic_inputs.js  show_text.js
workflows/: Comfyui-General-API-Node.json
