[project]
name = "general-api-node"
description = "A suite of powerful and versatile utility nodes for ComfyUI, designed to streamline complex workflows involving Large Language Models and text manipulation."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Core dependency for API communication", "openai>=1.0.0", "numpy", "Pillow"]

[project.urls]
Repository = "https://github.com/FeiMao-326/Comfyui-General-API-Node"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/FeiMao-326/Comfyui-General-API-Node/wiki"
"Bug Tracker" = "https://github.com/FeiMao-326/Comfyui-General-API-Node/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui-General-API-Node"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

