[project]
name = "general-api-node"
description = "A suite of powerful and versatile utility nodes for ComfyUI, designed to streamline complex workflows involving Large Language Models and text manipulation."
version = "1.0.4"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "openai>=1.0.0",
  "numpy",
  "Pillow"
]

[project.urls]
Repository = "https://github.com/FeiMao-326/Comfyui-General-API-Node"

[tool.comfy]
PublisherId = "feimao"
DisplayName = "Comfyui-General-API-Node"
Icon = ""
